Last call for alcohol... fixed svg button blue color in mobile safari

--- a/src/components/Header/Menu/Menu.module.css
+++ b/src/components/Header/Menu/Menu.module.css
@@ -13,7 +13,7 @@
 .button>svg {
   width: 2.5rem;
   height: 2.5rem;
-  color: inherit;
+  color: var(--base-black-20);
   transition: var(--transition-400);
 }
 
