Skim Links css fix

--- a/src/components/SkipLink/SkipLink.module.css
+++ b/src/components/SkipLink/SkipLink.module.css
@@ -13,8 +13,8 @@
   top: 10px;
   left: 10px;
   z-index: 1000;
-  color: var(--segunda-90);
-  background-color: var(--segunda-20);
+  color: var(--quinta-100);
+  background-color: var(--quinta-30);
   padding: 0.8rem 1.6rem 1.1rem;
   font-size: var(--fs-400);
   font-weight: var(--f-wei-600);
