FIxed some HTML validation errors, had div inside menu...

--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -46,6 +46,13 @@
   height: var(--space-900);
 }
 
+.addressTitle {
+  font-size: var(--fs-600);
+  font-weight: var(--f-wei-800);
+  font-stretch: var(--f-str-90);
+  line-height: var(--lh-400);
+}
+
 .notaLegalContainer p {
   font-size: var(--fs-300);
 }
