Changed menu-map, then changed again

--- a/src/components/Header/MenuDrawer/MenuDrawer.module.css
+++ b/src/components/Header/MenuDrawer/MenuDrawer.module.css
@@ -109,17 +109,18 @@
   padding: var(--space-100) var(--space-300);
   background-color: var(--primera-30);
   border-radius: var(--b-radius-100);
-  /* list-style-position: outside; */
   color: var(--primera-100);
 }
 
 .summary::marker,
 .summary::-webkit-details-marker {
   color: var(--sexta-50);
+
 }
 
-.location img {
-  border-radius: var(--b-radius-100);
+.location>img {
+  border-radius: var(--b-radius-200);
+  border: 2px solid var(--primera-30);
 }
 
 .containerQuery {
