--- a/src/components/HomePage/Hero/Hero/hero.module.css
+++ b/src/components/HomePage/Hero/Hero/hero.module.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   /* align-items: center; */
-  padding-block: var(--space-900);
+  /* padding-block: var(--space-900); */
   gap: var(--space-900);
+  margin-block: var(--space-900);
 }
