Refatoring css. Finished

--- a/src/components/AdBloque/AdBloque.module.css
+++ b/src/components/AdBloque/AdBloque.module.css
@@ -13,7 +13,7 @@
 
 .decorativeLine {
   height: 4px;
-  background-color: black;
+  background-color: var(--base-black-20);
   margin-block: 1rem;
 }
 
@@ -23,28 +23,28 @@
   width: auto;
 }
 
-/* left */
-.container[data-direction="left"] .titleContainer {
+.titleContainer {
   grid-column: 1/-1;
   grid-row: 1/2;
   align-self: end;
 }
 
+
+.content {
+  grid-column: 1/-1;
+  grid-row: 2/3;
+}
+
+.gridImg {
+  display: none;
+}
+
+/* left */
 .container[data-direction="left"] .titleImg {
   top: 0;
   right: 0;
   transform: translate(-50%, -50%)
 }
-
-.container[data-direction="left"] .content {
-  grid-column: 1/-1;
-  grid-row: 2/3;
-}
-
-.container[data-direction="left"] .gridImg {
-  display: none;
-}
-
 
 /* right */
 .container[data-direction="right"] {
@@ -52,10 +52,7 @@
 }
 
 .container[data-direction="right"] .titleContainer {
-  grid-column: 1/-1;
-  grid-row: 1/2;
   text-align: right;
-  align-self: end;
 }
 
 .container[data-direction="right"] .titleImg {
@@ -65,13 +62,7 @@
 }
 
 .container[data-direction="right"] .content {
-  grid-column: 1/-1;
-  grid-row: 2/3;
   text-align: right;
-}
-
-.container[data-direction="right"] .gridImg {
-  display: none;
 }
 
 
@@ -81,6 +72,7 @@
     display: none;
   }
 
+  /* left */
   .container[data-direction="left"] {
     grid-template-columns: auto 30%;
   }
@@ -111,13 +103,11 @@
   .container[data-direction="right"] .titleContainer {
     grid-column: -1/-2;
     grid-row: 1/2;
-    text-align: right;
   }
 
   .container[data-direction="right"] .content {
     grid-column: -1/-2;
     grid-row: 2/3;
-    text-align: right;
   }
 
   .container[data-direction="right"] .gridImg {
