Improved responivnes of AdBloque

--- a/src/components/AdBloque/AdBloque.module.css
+++ b/src/components/AdBloque/AdBloque.module.css
@@ -1,5 +1,4 @@
 .container {
-  position: relative;
   display: grid;
   grid-template-rows: repeat(2, auto);
   grid-template-columns: auto 15%;
@@ -7,8 +6,18 @@
   margin-block: var(--space-900)
 }
 
+.titleContainer {
+  position: relative;
+  grid-column: 1/-1;
+  grid-row: 1/2;
+  align-self: end;
+  display: flex;
+  flex-direction: column;
+}
+
 .h2 {
   line-height: 1;
+  max-width: 80%;
 }
 
 .decorativeLine {
@@ -19,16 +28,9 @@
 
 .titleImg {
   position: absolute;
-  height: 5.5rem;
+  height: 7rem;
   width: auto;
 }
-
-.titleContainer {
-  grid-column: 1/-1;
-  grid-row: 1/2;
-  align-self: end;
-}
-
 
 .content {
   grid-column: 1/-1;
@@ -40,10 +42,14 @@
 }
 
 /* left */
+.container[data-direction="left"] .h2 {
+  align-self: start;
+}
+
 .container[data-direction="left"] .titleImg {
-  top: 0;
+  bottom: 0;
   right: 0;
-  transform: translate(-50%, -50%)
+  transform: translate(-10%, -15%)
 }
 
 /* right */
@@ -55,10 +61,14 @@
   text-align: right;
 }
 
+.container[data-direction="right"] .h2 {
+  align-self: end;
+}
+
 .container[data-direction="right"] .titleImg {
-  top: 0;
+  bottom: 0;
   left: 0;
-  transform: translate(50%, -50%)
+  transform: translate(10%, -15%)
 }
 
 .container[data-direction="right"] .content {
@@ -120,7 +130,7 @@
 
 
 
-@media (min-width: 53rem) {
+@media (min-width: 54rem) {
 
   /* left */
   .container[data-direction="left"] {
