--- a/src/assets/global-styles/fonts.css
+++ b/src/assets/global-styles/fonts.css
@@ -1,5 +1,5 @@
 :root {
-  --fs-100: clamp(0.59rem, -0.02vi + 0.52rem, 0.5rem);
+  /* --fs-100: clamp(0.59rem, -0.02vi + 0.52rem, 0.5rem);
   --fs-200: clamp(0.64rem, 0.10vi + 0.70rem, 0.85rem);
   --fs-300: clamp(0.8rem, 0.16vi + 0.76rem, 0.89rem);
   --fs-400: clamp(1rem, 0.33vi + 1.12rem, 1.24rem);
@@ -7,9 +7,18 @@
   --fs-600: clamp(1.56rem, 0.97vi + 1.34rem, 2.11rem);
   --fs-700: clamp(1.95rem, 1.52vi + 1.6rem, 2.81rem);
   --fs-800: clamp(2.44rem, 2.31vi + 1.9rem, 3.75rem);
-  --fs-900: clamp(3.05rem, 3.44vi + 2.25rem, 5rem);
-  --fs-hero-100: clamp(3.5rem, 3.5vi + 3rem, 7rem);
+  --fs-900: clamp(3.05rem, 3.44vi + 2.25rem, 5rem); */
   /* --fs-extra-200: clamp(4.052rem, 6vw, 6.5rem); */
+  --fs-100: clamp(0.51rem, 0.03vi + 0.51rem, 0.53rem);
+  --fs-200: clamp(0.64rem, 0.11vi + 0.61rem, 0.7rem);
+  --fs-300: clamp(0.8rem, 0.24vi + 0.74rem, 0.94rem);
+  --fs-400: clamp(1rem, 0.44vi + 0.9rem, 1.25rem);
+  --fs-500: clamp(1.25rem, 0.74vi + 1.08rem, 1.67rem);
+  --fs-600: clamp(1.56rem, 1.16vi + 1.29rem, 2.22rem);
+  --fs-700: clamp(1.95rem, 1.78vi + 1.54rem, 2.96rem);
+  --fs-800: clamp(2.44rem, 2.66vi + 1.82rem, 3.95rem);
+  --fs-900: clamp(3.05rem, 3.91vi + 2.14rem, 5.26rem);
+  --fs-hero-100: clamp(3.5rem, 3.5vi + 3rem, 7rem);
 
 
   --f-str-75: 75%;
@@ -43,7 +52,7 @@ h1 {
 }
 
 h2 {
-  font-size: var(--fs-600);
+  font-size: var(--fs-700);
   font-weight: var(--f-wei-800);
   font-stretch: var(--f-str-90);
   line-height: var(--lh-400);
@@ -60,6 +69,11 @@ h4 {
   font-size: var(--fs-400);
   font-weight: var(--f-wei-600);
   font-stretch: var(--f-str-100);
+}
+
+p {
+  font-size: var(--fs-400);
+  line-height: var(--lh-500);
 }
 
 strong {
