--- a/src/components/Slider/Slider/Slider.module.css
+++ b/src/components/Slider/Slider/Slider.module.css
@@ -2,9 +2,9 @@
   scroll-snap-type: x mandatory;
   overflow-x: scroll;
   display: flex;
-  gap: 0.6rem;
-  padding: 0.4rem;
-  padding-block-end: 1rem;
+  gap: clamp(0.6rem, 4vw, 2rem);
+  padding: var(--space-500);
+  padding-block-end: 2rem;
   margin-block: var(--space-600);
   /* border: 1px solid black; */
 }
