--- a/src/components/Slider/SliderCard/SliderCard.module.css
+++ b/src/components/Slider/SliderCard/SliderCard.module.css
@@ -3,8 +3,9 @@
   display: flex;
   flex-direction: column;
   background-color: beige;
-  flex: 0 0 300px;
+  flex: 0 0 clamp(270px, 40vw, 340px);
   border-radius: 20px;
+  overflow: hidden;
   box-shadow: var(--shadow-400);
 }
 
