--- a/src/assets/global-styles/globals.css
+++ b/src/assets/global-styles/globals.css
@@ -18,6 +18,7 @@
 
   /* --shadow-300: 1px 1px 4px var(--base-gray-10); */
   /* --shadow-400: 2px 2px 6px var(--base-gray-9); */
+  --text-shadow: 2px 2px 6px var(--base-gray-9);
   --shadow-300: rgba(0, 0, 0, 0.23) 0px 3px 6px;
   --shadow-400: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
   --shadow-500: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
