Perfecionando el CSS en sliders

--- a/src/components/Slider/Slider/Slider.module.css
+++ b/src/components/Slider/Slider/Slider.module.css
@@ -4,7 +4,7 @@
   display: flex;
   gap: clamp(0.6rem, 4vw, 2rem);
   padding: var(--space-500);
-  padding-block-end: 2rem;
+  padding-block-end: var(--space-500);
   margin-block: var(--space-600);
   /* border: 1px solid black; */
 }
