--- a/src/components/Header/Header/Header.module.css
+++ b/src/components/Header/Header/Header.module.css
@@ -1,7 +1,21 @@
 .header {
-  /* background-color: var(--primera-80); */
+  background-color: var(--base-white-20);
   /* color: var(--primera-10); */
   padding-block: min(1.5vw, var(--space-300));
+  position: sticky;
+  top: 0;
+  z-index: 999;
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 500ms;
+}
+
+.header.down {
+  top: -5.35rem;
+}
+
+.header.up {
+  top: 0
 }
 
 .container {
