Fineished Offers component

--- a/src/components/AdBloque/AdBloque.module.css
+++ b/src/components/AdBloque/AdBloque.module.css
@@ -23,6 +23,7 @@
 .decorativeLine {
   height: 4px;
   background-color: var(--base-black-20);
+  border-radius: var(--b-radius-100);
   margin-block: 1rem;
 }
 
