Polishing css in why components and also that line...

--- a/src/components/AdBloque/AdBloque.module.css
+++ b/src/components/AdBloque/AdBloque.module.css
@@ -21,10 +21,10 @@
 }
 
 .decorativeLine {
-  height: 4px;
+  height: var(--space-100);
   background-color: var(--base-black-20);
+  margin-block: var(--space-300);
   border-radius: var(--b-radius-100);
-  margin-block: 1rem;
 }
 
 .titleImg {
