--- a/src/components/HomePage/Offers/offers.module.css
+++ b/src/components/HomePage/Offers/offers.module.css
@@ -7,9 +7,9 @@
 }
 
 .decorativeLine {
-  height: 4px;
+  height: var(--space-100);
   background-color: var(--base-black-20);
-  margin-block: 1rem;
+  margin-block: var(--space-300);
   border-radius: var(--b-radius-100);
 }
 
